262578989263/Games/templates/httproute-games-wordpress1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: games-wordpress1
  namespace: gamestest
  labels:
    app.kubernetes.io/name: games-wordpress1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Games
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infra
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wordpress1-svc
          namespace: gamestest
          port: 80
  hostnames:
    - wp.k8h.admin.billingpay.com.br
